# ancpaint

./: .gitignore  CMakeLists.txt  main.cpp
include/: ancpaint.h
src/: ancpaint.cpp
